--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "client/"] 
-  path = client/ 
+[submodule "client"] 
+  path = client 
   url = https://github.com/honganh1903/dapp-marketplace.git
